# hca-validation-tools

./: .dockerignore  .env.example  .env.make.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  CLAUDE.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  config.yaml  hca-validation-tools.code-workspace  pyproject.toml  pyrightconfig.json  rebase-info.tmp  release-please-config.json  ruff.toml  setup.sh
.claude/: github-projects.md  settings.json
.claude/skills/curate-h5ad/: SKILL.md
.claude/skills/evaluate-h5ad/: SKILL.md
.github/workflows/: ci.yml  publish-hca-schema-validator.yml  release-please.yml
data_dictionaries/: core_data_dictionary.json
deployment/dataset-validator/: Dockerfile
deployment/docker-build/: Dockerfile  README.md  build_lambda_container.sh  dev-notes.md  interactive_lambda_test.sh  test_api_endpoint.sh  test_lambda_container_locally.sh
deployment/entry-sheet-validator/: Dockerfile  README.md  build_lambda_container.sh  config.yaml  dev-notes.md
docs/: dataset-validator-checks.md  multi-service-architecture.md  prd-cap-annotations-and-gene-validation.md  prd-curation-report.md  prd-h5ad-editing.md  prd-set-uns.md  prd-upload-versioning-and-concurrency.md
make/: check-clean.mk
scripts/: check_sibling_deps.py
services/cellxgene-validator/: Makefile  pyproject.toml
services/cellxgene-validator/src/cellxgene_validator/: main.py
services/cellxgene-validator/tests/: test_cellxgene_validator.py
services/dataset-validator/: Makefile  pyproject.toml
services/dataset-validator/src/dataset_validator/: __init__.py  cap_validator_script.py  main.py
services/dataset-validator/tests/: test_cleanup.py  test_dataset_validator.py  test_docker_smoke.py  test_metadata_coverage.py  test_missing_metadata.py  test_validation_message.py
services/dataset-validator/tests/mock-modules/: cap_validator.py  cellxgene_validator.py  hca_cell_annotation_validator.py  hca_schema_validator.py
services/entry-sheet-validator/: Makefile  pyproject.toml
services/entry-sheet-validator/src/entry_sheet_validator_lambda/: handler.py  test_lambda.py
services/entry-sheet-validator/tests/: test_lambda_container_smoke.py
services/hca-schema-validator/: Makefile  pyproject.toml
services/hca-schema-validator/src/hca_schema_validator/: main.py
services/hca-schema-validator/src/hca_schema_validator_service/: _log_capture.py  cell_annotation.py  main.py
services/hca-schema-validator/tests/: test_cell_annotation.py  test_hca_schema_validator.py
shared/: Makefile  pyproject.toml
shared/src/hca_validation/: __init__.py
shared/src/hca_validation/data_dictionary/: generate_dictionary.py
shared/src/hca_validation/entry_sheet_validator/: apply_fixes.py  find_fixes.py  process_sheet.py  validate_sheet.py
shared/src/hca_validation/h5ad_storage/: __init__.py  h5ad_storage.py
shared/src/hca_validation/metadata_coverage/: __init__.py  metadata_coverage.py
shared/src/hca_validation/schema/: __init__.py  cell.yaml  core.yaml  dataset.yaml  enums.yaml  slots.yaml
shared/src/hca_validation/schema/bionetwork/: musculoskeletal.yaml
shared/src/hca_validation/schema_utils/: __init__.py  schema_utils.py
shared/src/hca_validation/validator/: validator.py
shared/tests/: conftest.py  test_dependency_imports.py  test_entry_sheet_validator.py  test_h5ad_storage.py  test_schema.py  test_validator.py
shared/tests/data/: invalid_dataset.json  valid_dataset.csv  valid_or_invalid_by_model_dataset.json
src/hca_validation/: __init__.py
src/hca_validation/data_dictionary/: __init__.py  expand_schema.py  generate_dictionary.py
src/hca_validation/data_transfer/: __init__.py
src/hca_validation/entry_sheet_validator/: __init__.py  apply_fixes.py  common.py  find_fixes.py  process_sheet.py  validate_sheet.py
src/hca_validation/h5ad_validator/: __init__.py
src/hca_validation/lambda_functions/: __init__.py
src/hca_validation/lambda_functions/entry_sheet_validator_lambda/: README.md  __init__.py  handler.py  test_lambda.py
src/hca_validation/schema/: cell.yaml  core.yaml  dataset.yaml  donor.yaml  enums.yaml  sample.yaml  slots.yaml
src/hca_validation/schema/bionetwork/: adipose.yaml  gut.yaml
src/hca_validation/schema_utils/: __init__.py  schema_utils.py
src/hca_validation/validator/: __init__.py  validator.py
tests/: conftest.py  test_entry_sheet_validator.py  test_lambda_container_smoke.py  test_validator.py
tests/data/: valid_dataset.json  valid_or_invalid_by_model_dataset.json
