[tool.poetry]
name = "hca-validation-tools"
version = "0.1.0"
description = "Tools for validating HCA (Human Cell Atlas) ingest data"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "hca_validation", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
hca-validation-shared = {path = "./shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
python-dotenv = "^1.1.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
