[tool.poetry]
name = "hca-validation-shared"
version = "0.1.0"
description = "Shared data dictionary generation for HCA validation tools"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "hca_validation", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
linkml-runtime = "^1.9.1"
linkml-validator = "^0.4.5"
linkml = "1.9.2"
pyyaml = "^6.0"
pandas = "^2.2.3"
requests = "^2.32.3"
gspread = "^6.2.0"
psutil = "^7.0.0"
python-dotenv = "^1.1.0"
pydantic = "^2.11.4"
pydantic-core = "^2.33.2"
google-api-python-client = "^2.171.0"
urllib3 = "^2.5.0"
# Optional: only needed by the `h5ad_storage` module (HDF5 introspection).
# Kept out of the default install so lightweight consumers (e.g. the entry-sheet
# Lambda) don't pull h5py. Enable via the `h5ad` extra.
h5py = {version = "^3.8", optional = true}

[tool.poetry.extras]
h5ad = ["h5py"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
h5py = "^3.8"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
