[project]
name = "hca-validation-shared"
version = "0.1.0"
description = "Shared data dictionary generation for HCA validation tools"
authors = [{ name = "Clever Canary", email = "dave@clevercanary.com" }]
requires-python = ">=3.10,<4.0"
dependencies = [
    # Capped below 1.10: linkml-runtime 1.10 removed Format.JSON, which the
    # exact-pinned linkml==1.9.2 calls at import time. linkml 1.9.2's own
    # metadata declares linkml-runtime<2, which is too loose — uv resolves to
    # the newest in range and breaks `import linkml`. Poetry masked this by
    # freezing 1.9.5 in its lock. Do not relax without bumping linkml.
    "linkml-runtime>=1.9.2,<1.10",
    "linkml-validator>=0.4.5,<0.5",
    "linkml==1.9.2",
    "pyyaml>=6.0,<7",
    "pandas>=2.2.3,<3",
    "requests>=2.32.3,<3",
    "gspread>=6.2.0,<7",
    "psutil>=7.0.0,<8",
    "python-dotenv>=1.1.0,<2",
    "pydantic>=2.11.4,<3",
    "pydantic-core>=2.33.2,<3",
    "google-api-python-client>=2.171.0,<3",
    "urllib3>=2.5.0,<3",
]

# Optional: only needed by the `h5ad_storage` module (HDF5 introspection).
# Kept out of the default install so lightweight consumers (e.g. the entry-sheet
# Lambda) don't pull h5py. Enable via the `h5ad` extra.
[project.optional-dependencies]
h5ad = ["h5py>=3.8,<4"]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-mock>=3.14.0,<4",
    # Unconditional here (not via the h5ad extra) so the test suite always
    # exercises the h5ad_storage module.
    "h5py>=3.8,<4",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hca_validation"]
