[project]
name = "cellxgene-validator"
version = "0.1.0"
requires-python = "~=3.11"
dependencies = [
    "cellxgene-schema==7.0.1",
]

[dependency-groups]
dev = ["pytest>=8.4.2,<9"]

# Not a distributable package — a subprocess validator built into the Batch image.
# No exclude-newer: the pre-uv poetry.lock is not cleanly reproducible at any date
# (see #475). Fresh resolution; the migration's no-behavior-change guarantee is
# proven by output equivalence + a real Batch run, not by freezing deps.
[tool.uv]
package = false
