[tool.poetry]
name = "hca-dataset-validator"
version = "0.1.0"
description = "Dataset validation Batch service for HCA validation tools"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# AWS dependencies for S3 operations
boto3 = "^1.34.0"
# Minimal dependencies for Batch environment - add back as needed
# python-dotenv = "^1.1.0"
# hca-validation-shared = {path = "../../shared", develop = true}
anndata = "^0.12.2"
cap-upload-validator = "^1.2.0"

[tool.poetry.group.dev.dependencies]
# Testing dependencies
pytest = "^8.3.5"
moto = "^4.2.0"
# Additional dev dependencies - add back as needed
# pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
