[tool.poetry]
name = "hca-entry-sheet-validator"
version = "0.1.0"
description = "Entry sheet validation Lambda service for HCA validation tools"
authors = ["Your Name <your.email@example.com>"]
# No packages - this is a Lambda function, not a Python package

[tool.poetry.dependencies]
python = "^3.10"
hca-validation-shared = {path = "../../shared", develop = true}
# AWS Lambda runtime
boto3 = "^1.34.0"
# Minimal dependencies for Lambda environment
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
moto = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
