[project]
name = "hca-schema-validator-service"
version = "0.1.0"
requires-python = "~=3.11"
dependencies = [
    "hca-schema-validator>=0.14.0,<0.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "pyright>=1.1.408,<2",
]

# Not a distributable package — a subprocess validator built into the Batch image.
# Consumes the PUBLISHED hca-schema-validator wheel (its exact cellxgene pins),
# never a path dep. No exclude-newer (see #475 / cellxgene note).
[tool.uv]
package = false
